[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db_pool_frostyfeet909"
version = "0.0.1"
authors = [
  { name="Algernon Sampson", email="algiesampson@gmail.com" },
]
description = "A db pool interface."
readme = "README.md"
requires-python = "==3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"